[gd_scene load_steps=2 format=2]

[ext_resource path="res://World/PlayerCamera.gd" type="Script" id=1]

[node name="Camera2D" type="Camera2D"]
position = Vector2( 282.852, 138.591 )
current = true
script = ExtResource( 1 )

[node name="Limits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="Limits"]
position = Vector2( -206.627, -183.948 )

[node name="BottomRight" type="Position2D" parent="Limits"]
position = Vector2( 771.072, 466.171 )

[node name="Tween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
